2008-07-27	Nick Schermer <nick@xfce.org>

	* configure.ac.in, dialogs/mouse-settings/main.c,
	  dialogs/mouse-settings/Makefile.am,
	  xfce4-settings-helper/pointers.c,
	  xfce4-settings-helper/Makefile.am: Drop HAL dependency
	  and use Xevent for monitoring device changes.

2008-07-27	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/keyboard-settings/main.c,
	  xfce4-settings-helper/keyboard-shortcuts.c: Use
	  xfconf_channel_get_properties() instead of xfconf_channel_get_all().

2008-07-26	Nick Schermer <nick@xfce.org>

	First commit with legacy code working (randr < 1.2). Randr
	1.2 code disabled for now.
	
	* xfce4-settings-helper/Makefile.am,
	  configure.ac.in: Depend on randr 1.1 and remove xxf86vm.
	* dialogs/display-settings/xfce-randr-legacy.c,
	  dialogs/display-settings/xfce-randr-legacy.h: Lagecy backend.
	  This is used when compiled with randr < 1.2, when the drivers
	  is not really randr 1.2 or when there are more then one screen
	  on the default display.
	* dialogs/display-settings/xfce-randr.c,
	  dialogs/display-settings/xfce-randr.h: Randr 1.2 code, not
	  working yet. Disabled it for the moment.
	* dialogs/display-settings/main.c: Updates.
	* dialogs/display-settings/Makefile.am: Add new files.
	* xfce4-settings-helper/displays.c: Make legacy randr
	  code work.
	* dialogs/display-settings/display-dialog.glade: Updates.

2008-07-19	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/mouse-dialog.glade: Simplify packing
	  of the widgets, like we do in the other dialogs.

2008-07-19	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c, xfce4-settings-helper/pointers.c:
	  Remove the notification. Not a good idea since it also shows
	  after suspend.

2008-07-19	Nick Schermer <nick@xfce.org>

	* dialogs/keyboard-settings/main.c,
	  dialogs/keyboard-settings/keyboard-dialog.glade: Set default
	  window width in the glade file, not in the code.

2008-07-19	Nick Schermer <nick@xfce.org>
